--- a/Exercicios/Desafio008/style.css
+++ b/Exercicios/Desafio008/style.css
@@ -20,3 +20,12 @@ h1{
     
     text-shadow: 1px 1px 2px rgb(67, 88, 1);
 }
+a{
+    color: blue;
+    text-decoration: none;
+    font: bold;
+}
+a:visited{
+    color: rgb(230, 241, 28);
+    text-decoration: underline;
+}
