--- a/Exercicios/Desafio008/style.css
+++ b/Exercicios/Desafio008/style.css
@@ -1,31 +1,46 @@
 @charset "UTF-8";
 
-*{
-    font-family:Arial, Helvetica, sans-serif;
+/* Height = Altura  conteúdo. 
+   width = Largura da  conteúdo.
+   border = Linha que circula o seu conteúdo. 
+   padding = Espaço entre a bordar e conteúdo. 
+   Margin = Espaço externo do conteúdo. 
+   outline = contorno ou traçado.
+   box-level = (div,h1 - h6,p,main,header,nav,article,aside,footer,form,video) Ele sempre se inicia numa linha nova e ele sempre ocupa a largura total da tela.
+   inline - level = (span,a, code,small,strong,em,sup-sub,label,button,input,select) Ele nao vai para proxima linha, ele nao quebra a linha, ele ocupa o tamanho 
+   que precisa e depois dá continuidade ao conteúdo na mesma linha. 
+   */
+* {
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 body {
-    background-image: linear-gradient(to right,#C4FFF9,#9CEAEF,#68D8D6,#3DCCC7,#07BEB8);
+    background-image: linear-gradient(to right, #C4FFF9, #9CEAEF, #68D8D6, #3DCCC7, #07BEB8);
 }
-main{
+
+main {
     background-color: white;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px  rgb(25, 148, 193);
+    box-shadow: 5px 5px 15px rgb(25, 148, 193);
     width: 820px;
     padding: 10px;
     margin: auto;
 }
-h1{
-    color:#616efc;
+
+h1 {
+    color: #616efc;
     text-align: center;
-    
+
     text-shadow: 1px 1px 2px rgb(67, 88, 1);
 }
-a{
+
+a {
     color: blue;
     text-decoration: none;
     font: bold;
 }
-a:visited{
+
+a:visited {
     color: rgb(230, 241, 28);
     text-decoration: underline;
 }
