--- a/Exercicios/modelo02desafio010/style.css
+++ b/Exercicios/modelo02desafio010/style.css
@@ -14,47 +14,51 @@
 #181D27
 #D5D6AA */
 
-:root{
+:root {
 
-    --cor0:#D5D6AA;
+    --cor0: #D5D6AA;
     --cor1: #181D27;
     --cor2: #254D32;
-    --cor3: #3a7d44; 
+    --cor3: #3a7d44;
     --cor4: #86BBD8;
-    --fonte-padrao: Arial,Verdana,Helvetica,sans-serif;
-    --fonte-destaque:'Bebas Neue';
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue';
     --font-android: 'Android';
 
 }
-*{
+
+* {
     margin: 0px;
     padding: 0px;
 }
 
-body{
+body {
     background-color: var(--cor4);
     font-family: var(--fonte-padrao);
 }
-a.externo::after{
+
+a.externo::after {
     content: '\00A0\1F517';
 
 }
 
-header{
-    background-image:linear-gradient( to bottom,var(--cor4),var(--cor2));
+header {
+    background-image: linear-gradient(to bottom, var(--cor4), var(--cor2));
     min-height: 150px;
     text-align: center;
     padding-top: 40px;
 }
-header > h1{
-    color: white ;
+
+header>h1 {
+    color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
     margin-bottom: 30px;
-    text-align: 2px 2px 0px rgb(0,0,0,0.267);
+    text-align: 2px 2px 0px rgb(0, 0, 0, 0.267);
 
 }
-header > p{
+
+header>p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     font-weight: normal;
@@ -63,15 +67,17 @@ header > p{
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
-   padding-bottom: 50px;
-   text-shadow: 2px 2px 0px rgb(0, 0, 0, 0.315);
+    padding-bottom: 50px;
+    text-shadow: 2px 2px 0px rgb(0, 0, 0, 0.315);
 }
-nav{
+
+nav {
     background-color: var(--cor0);
     padding: 10px;
-    box-shadow: 0px 7px 9px rgb(0,0,0,0.363);
+    box-shadow: 0px 7px 9px rgb(0, 0, 0, 0.363);
 }
-nav > a{
+
+nav>a {
     color: white;
     padding: 10px;
     border-radius: 5px;
@@ -79,88 +85,100 @@ nav > a{
     font-weight: bold;
     transition-duration: .5s;
 }
-nav > a:hover{
+
+nav>a:hover {
     background-color: var(--cor1);
     color: var(--cor3);
 }
-main{
-  
+
+main {
+
     background-color: white;
-    padding:20px ;
+    padding: 20px;
     border-radius: 10px;
     min-width: 280px;
     max-width: 800px;
     margin: auto;
 }
-main h1{
+
+main h1 {
     color: var(--cor3);
     font-family: var(--font-android);
     font-size: 1.8em;
     font-weight: normal;
 }
-main h2{
+
+main h2 {
     font-family: var(--font-android);
     color: var(--cor2);
     font-size: 1.3em;
-    font-weight:normal;
-    background-image: linear-gradient(to right, var(--cor4),transparent);
+    font-weight: normal;
+    background-image: linear-gradient(to right, var(--cor4), transparent);
     text-indent: 8px;
 }
-main p{
+
+main p {
     margin: 15px 0px;
     text-align: justify;
     text-indent: 30px;
     font-size: 1em;
     line-height: 2em;
 }
-main strong{
+
+main strong {
     color: var(--cor3);
     font-weight: bold;
     background-color: var(--cor4);
     padding: 2px 6px;
 }
-main a{
+
+main a {
     text-decoration: none;
     font-weight: bold;
     color: var(--cor3);
     background-color: var(--cor0);
     padding: 2px 6px;
 }
-main a:hover{
+
+main a:hover {
     text-decoration: underline;
     color: var(--cor1);
 }
-main img{
+
+main img {
     width: 100%;
 }
-main img.pequena{
+
+main img.pequena {
     max-width: 350px;
     display: block;
     margin: auto;
 
 }
-aside{
+
+aside {
     background-color: var(--cor0);
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 3px 3px 8px rgb(0, 0, 0,0.281);
+    box-shadow: 3px 3px 8px rgb(0, 0, 0, 0.281);
 }
-aside > h3{
+
+aside>h3 {
     background-color: var(--cor4);
     color: white;
     padding: 10px;
     margin: -10px -10px 0px -10px;
     border-radius: 10px 10px 0px 0px;
-    
+
 }
 
-aside > ul{
+aside>ul {
     list-style-type: '\2714\00A0\00A0';
     list-style-position: inside;
     columns: 2;
 }
 
-footer{
+footer {
     background-color: var(--cor3);
     color: white;
     text-align: center;
@@ -168,13 +186,14 @@ footer{
     padding: 5px;
 
 }
-footer a{
+
+footer a {
     color: white;
     font-weight: bolder;
     text-decoration: none;
 }
-footer a:hover{
+
+footer a:hover {
     text-decoration: underline;
     color: var(--cor3);
 }
-
