--- a/Exercicios/Desafio012/estilo/style.css
+++ b/Exercicios/Desafio012/estilo/style.css
@@ -1,1 +1,58 @@
 @charset "UTF-8";
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+html,body{
+    min-height: 100vh;
+    background-color: rgb(252, 254, 161);
+}
+
+header{
+    background-color: rgb(238, 177, 8);
+    color: rgb(3, 0, 0);
+    text-align: center;
+}
+header > h1{
+    padding: 50px;
+    text-transform: uppercase;
+}
+header >p{
+    padding-bottom: 50px;
+}
+header  a,footer a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+header a:hover,footer a:hover{
+
+    text-decoration: underline;
+}
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+section.normal{
+    background-color: rgb(139, 175, 242);
+    color: black;
+}
+section.imagem{
+    background-color: blanchedalmond;
+    color: white;
+}
+section.imagem > p{
+    width: 400px;
+    padding-left: 30px;
+    background-color: rgb(125, 120, 120);
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
