--- a/Exercicios/Desafio012/estilo/style.css
+++ b/Exercicios/Desafio012/estilo/style.css
@@ -1,10 +1,17 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Rubik:wght@300;900&display=swap');
+:root{
+    --fonte1: Verdana, Tahoma, sans-serif;
+    --fonte2: 'Rubik', sans-serif;
+    --fonte3: 'Domine', serif;
+}
 
 *{
     margin: 0px;
     padding: 0px;
 }
 html,body{
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: rgb(252, 254, 161);
 }
@@ -17,6 +24,8 @@ header{
 header > h1{
     padding: 50px;
     text-transform: uppercase;
+    font-family: var(--fonte2);
+    font-size: 10vh;
 }
 header >p{
     padding-bottom: 50px;
@@ -35,16 +44,25 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 4vh;
+    
 }
 section.normal{
     background-color: rgb(139, 175, 242);
     color: black;
+}
+section.normal > p{
+    background-color: rgb(247, 204, 204);
+    width: 400px;
+    padding-left: 30px;
 }
 section.imagem{
     background-color: blanchedalmond;
     color: white;
 }
 section.imagem > p{
+    display: inline-block;
     width: 400px;
     padding-left: 30px;
     background-color: rgb(125, 120, 120);
