--- a/Exercicios/Desafio012/estilo/style.css
+++ b/Exercicios/Desafio012/estilo/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Rubik:wght@300;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Rubik:ital,wght@0,300;0,900;1,400&display=swap');
 :root{
     --fonte1: Verdana, Tahoma, sans-serif;
     --fonte2: 'Rubik', sans-serif;
@@ -27,7 +28,7 @@ header > h1{
     font-family: var(--fonte2);
     font-size: 10vh;
 }
-header >p{
+header > p{
     padding-bottom: 50px;
 }
 header  a,footer a{
@@ -44,28 +45,51 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
-    font-family: var(--fonte3);
+    font-family: var(--fonte2);
     font-size: 4vh;
     
 }
+section > p{
+    padding-bottom: 2em;
+}
 section.normal{
-    background-color: rgb(139, 175, 242);
+    background-color: rgb(167, 194, 245);
     color: black;
 }
 section.normal > p{
-    background-color: rgb(247, 204, 204);
-    width: 400px;
+    
+    width: 4500px;
     padding-left: 30px;
+    background-size: cover;
 }
 section.imagem{
     background-color: blanchedalmond;
     color: white;
+    box-shadow: inset 2px 2px 12px 2px rgb(24, 22, 22);
+    background-attachment: fixed;
+    
 }
 section.imagem > p{
     display: inline-block;
-    width: 400px;
+ 
+    padding: 5px;
     padding-left: 30px;
-    background-color: rgb(125, 120, 120);
+    background-color: rgb(0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+   
+    
+ 
+}
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+
+}
+section#img02{
+
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 
 footer{
