--- a/Exercicios-modelo3/fundo006.css
+++ b/Exercicios-modelo3/fundo006.css
@@ -2,13 +2,19 @@ body{
     height: 100vh;
     background-color: black;
     background-image: url('imagem/wallpaper002.jpg');
-    background-position: center top;
+    background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
+     background-attachment: fixed;
 }
+/* Shorthand - background
+color > image > position >  repet > [SIZE] attachment 
+
+background: black url('imagem/wallpaper002.jpg) center center no-epeat fixed') 
+backgroun-size: cover; */
 main{
     background-color: white;
-    width: 400px;
+    max-width: 400px;
     padding: 10px;
     margin: auto;
     border: 1px solid darkblue;
