--- a/Exercicios-modelo3/fundo007.css
+++ b/Exercicios-modelo3/fundo007.css
@@ -6,6 +6,7 @@
     padding: 20px;
     background-color: purple;
 }
+
 #conteudo{
     background-image: url('imagem/target001.png');
     background-size: 100% 100%;
@@ -15,5 +16,6 @@
     background-color: yellow;
     left: 50%;
     top: 50%;
+    transform: translate(-50%,-50%);
 
 }
