--- a/Exercicios-modelo3/ex023/tabela002.css
+++ b/Exercicios-modelo3/ex023/tabela002.css
@@ -17,3 +17,9 @@ td.num{
     text-align: right;
 
 }
+caption{
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    background-color: bisque;
+}
