--- a/Exercicios-modelo3/ex023/tabela002.css
+++ b/Exercicios-modelo3/ex023/tabela002.css
@@ -17,7 +17,7 @@ td.num{
     text-align: right;
 
 }
-tbody > tr:nth-child(2n){
+ tbody > tr:nth-child(2n){   /*odd ou even*/
     background-color: lightgray;
 }
 caption{
