--- a/Exercicios-modelo3/ex023/desafio004.css
+++ b/Exercicios-modelo3/ex023/desafio004.css
@@ -1,8 +1,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+table{
+    border: 4px solid black;
+    box-shadow: 1px 1px 1px;
+    border-radius: 7px;
+}
 th,td{
     border: 1px solid black;
+    border-radius: 7px;
+    box-shadow: 1px 1px 1px blue;
 }
 .principal{
     background-color: lightblue;
